[package]
name = "oracle_verification_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tonic = { version = "0.12", features = ["transport"] }
futures-util = "0.3"
url = "2"
prometheus = "0.13"
axum = "0.7"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
cosmrs = { version = "0.22", features = ["cosmwasm"] }
bip39 = "2"
